--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,18 +22,22 @@ spring:
     job:
       enabled: false
   # 配置数据源信息
+#  datasource:
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/wxapp?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
+#    username: root
+#    password: root
+  h2:
+    console.enabled: true
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/wxapp?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:testdb
     username: root
     password: root
   jpa:
-    show-sql: true # 默认false，在日志里显示执行的sql语句
-#    database: mysql
-#    hibernate.ddl-auto: update #指定为update，每次启动项目检测表结构有变化的时候会新增字段，表不存在时会 新建，如果指定create，则每次启动项目都会清空数据并删除表，再新建
-#    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect # 使用JPA创建表时，默认使用的存储引擎是MyISAM，通过指定数据库版本，可以使用InnoDB
-#    database-platform: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
     hibernate:
+      ddl-auto: create
       naming:
         #指定jpa的自动表生成策略，驼峰自动映射为下划线格式
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
