upgrade to spring-boot 4.0.0-M3
as a result, also migrate spring-batch to 6.0.0-M

csvFileImportJob now support input file path configuration.

add integration test for spring-batch

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     init:
       enabled: true
 #      schema-locations: classpath:schema.sql
-      data-locations: classpath:people.sql
+#      data-locations: classpath:people.sql
   # 配置数据源信息
 #  datasource:
 #    driverClassName: com.mysql.cj.jdbc.Driver
