--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,9 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-kahadb-store</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-integration</artifactId>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-jms</artifactId>
 		</dependency>
 		<!--        <dependency>-->
 		<!--            <groupId>com.mysql</groupId>-->
