reorganize package structure.
enable virtual-threads by default.

add test for `LogAspect` and `SpringProxy`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ management:
       exposure:
         include: '*'
 spring:
+  threads:
+    virtual:
+      enabled: true
   activemq:
     broker-url: vm://localhost?broker.persistent=false
   batch:
@@ -52,10 +55,6 @@ spring:
         #指定jpa的自动表生成策略，驼峰自动映射为下划线格式
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
         #physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-app:
-  user: abc
-  pswd: ${secret}
 
 decorator:
   datasource:
