--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  threads:
+    virtual:
+      enabled: true
   activemq:
     broker-url: vm://localhost?broker.persistent=false
   batch:
@@ -6,7 +9,7 @@ spring:
       enabled: false  # prevent auto-launch the only one job
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb;NON_KEYWORDS=user
+    url: jdbc:h2:mem:testdb
     username: root
     password: root
     hikari:
