fix Jms related unit test
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     virtual:
       enabled: true
   activemq:
-    broker-url: vm://localhost?broker.persistent=false
+    broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
   batch:
     jdbc:
       initialize-schema: always  # 自动创建 batch 相关表
