--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,13 +3,13 @@ spring:
     virtual:
       enabled: true
   activemq:
-    broker-url: vm://localhost?broker.persistent=false
+    broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
   batch:
     job:
       enabled: false  # prevent auto-launch the only one job
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb;NON_KEYWORDS=user
     username: root
     password: root
     hikari:
