Add WebSocket Usage (topic/queue).
websocket now provide two apis for clients:

1. `/app/send-to-all`, which will broadcast message to all subscribed clients. subscribe url: /topic/messages.

2. `/app/send-to-user`, which only broadcast message to current session user. subscribe url: /user/queue/messages.

provide `websocket.html` to show the usage  placed under `src/test/java/com/jiandong/websocket/websocket.html`.

also provide the full integration test under `WebSocketConfigTest`.

websocket authentication utilizes the basic authentication in spring-security, the `Authorization` is required when sending the request.

more see: https://docs.spring.io/spring-framework/reference/web/websocket.html

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,12 @@ spring:
         schema-initialization:
           enabled: false # do not auto create table for event publication
 
+logging:
+  level:
+    org.springframework:
+      web.socket.messaging: INFO
+      messaging.simp: INFO
+
 management:
   endpoints:
     web:
