Add Api-Versioning Support.
spring 7.x start supporting api versioning. both server and client(RestClient/WebClient).

boot provides a convenient way to auto-configurer via few properties.

our application now force required api-version (with header `X-API-Version`) for each incoming request.

see `AccountControllerTest` to see how it works.

also replace `MockMvc` with `MockMvcTester` for test cases.

more see: https://spring.io/blog/2025/09/16/api-versioning-in-spring

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  mvc:
+    apiversion:
+      required: true
+      use:
+        header: X-API-Version
   threads:
     virtual:
       enabled: true
