--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 8080
 
 spring:
+  mvc:
+    apiversion:
+      required: true
+      use:
+        header: X-API-Version
   threads:
     virtual:
       enabled: true
