--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,19 +10,20 @@ spring:
   threads:
     virtual:
       enabled: true
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: root
-    password: root
-    hikari:
-  sql:
-    init:
-      enabled: true
-      schema-locations: classpath:schema/**/*.sql
-      # data-locations: classpath:data/*/*.sql
-  h2:
-    console.enabled: true
+  #  using docker-compose now, following are not required
+  #  datasource:
+  #    driverClassName: org.h2.Driver
+  #    url: jdbc:h2:mem:testdb
+  #    username: root
+  #    password: root
+  #    hikari:
+  #  sql:
+  #    init:
+  #      enabled: true
+  #      schema-locations: classpath:schema/**/*.sql
+  #      #data-locations: classpath:data/*/*.sql
+  #  h2:
+  #    console.enabled: true
   activemq:
     broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
   integration:
