Use TestContainer with Postgresql instead of in-memory h2.
Closes to: #36

- Move docker init db schema to main resource folder.
- Deleted all test folder db schemas, tests now use same schema as main app.

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,12 +7,12 @@ spring:
   threads:
     virtual:
       enabled: true
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: root
-    password: root
-    hikari:
+  #  datasource:
+  #    driverClassName: org.h2.Driver
+  #    url: jdbc:h2:mem:testdb
+  #    username: root
+  #    password: root
+  #    hikari:
   activemq:
     broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
   integration:
@@ -20,7 +20,7 @@ spring:
       initialize-schema: always  # auto create integration related tables
   batch:
     jdbc:
-      initialize-schema: always # auto create for test
+      initialize-schema: never
     job:
       enabled: false  # prevent auto-launch the only one job
   modulith:
