--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
       - '5432'
     volumes:
       - type: bind
-        source: ./docker/db/init
+        source: ./src/main/resources/docker/db/init
         target: /docker-entrypoint-initdb.d/
       - type: volume
         source: postgres-data
