Replace Embedded ActiveMq with Docker Compose & Test Container
Related to: #36

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,8 @@
 services:
+  activemq:
+    image: 'apache/activemq-classic:6.1.8'
+    ports:
+      - '61616'
   postgres:
     image: 'postgres:11'
     environment:
