--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,7 +14,9 @@ spring:
   #    password: root
   #    hikari:
   activemq:
-    broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
+    embedded:
+      enabled: false
+  #  broker-url: vm://localhost?broker.persistent=false&broker.useShutdownHook=false
   integration:
     jdbc:
       initialize-schema: never  # never auto create integration related tables
